<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@*android:id/content" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_developers_label" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/about_developers" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_developers" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffffbb33" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_developers_warning" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:id="@id/about_translator_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/about_translator_label" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/about_translator" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/translator" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/about_version_label" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/version" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/about_source_label" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:autoLink="web" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_source" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/about_support_label" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:autoLink="web" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_support" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffffbb33" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_support_warning" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/about_libraries_label" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/about_libraries" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_libraries" />
    </LinearLayout>
</ScrollView>